# pyipsw

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
pyipsw/: __main__.py  cli.py  pyipsw.py
